# dod-shell

./: .commit-lsp.toml  .envrc  .gitignore  Cargo.toml  LICENSE_MIT.txt  README.md  deny.toml  dod-shell.drawio  dod-watch.sh  flake.nix  taplo.toml
.github/workflows/: build_nix.yml
crates/bar/: Cargo.toml  build.rs
crates/bar/src/: label_icon.rs  lib.rs  main.rs  system_state.rs  time_playing.rs  workspaces.rs
crates/bar/src/app/: mod.rs  primary.rs  secondary.rs  state.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  css.rs  err.rs  lib.rs  types.rs
crates/common/src/config/: bar.rs  launcher.rs  layouts.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: config.rs  lib.rs  main.rs  system_state.rs
crates/daemon/src/osk/: mod.rs  state.rs  wayland.rs
crates/daemon/src/playback/: mod.rs
crates/deamon/: Cargo.toml
crates/deamon/src/: config.rs  lib.rs  main.rs  system_state.rs
crates/launcher/: Cargo.toml
crates/launcher/src/: lib.rs  main.rs  results.rs
crates/launcher/src/mode/: clipboard.rs  launch.rs  math.rs  mod.rs  search.rs
crates/launcher/src/results/: category.rs  entry.rs  list.rs  mod.rs
crates/osk/: Cargo.toml  build.rs
crates/osk/src/: layout.json  layouts.rs  lib.rs  main.rs
crates/osk/src/key/: code_resolve.rs  mod.rs  osk_key.rs  osk_row.rs  symbol.rs
nix/: hm-module.nix
src/: main.rs
src/mode/: launch.rs  math.rs  mod.rs  search.rs
test/: config.toml  layouts.json  layouts.schema.json  style.scss
test/data/: launch.json
