[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT or Apache-2.0"
version = "0.2.0"

[workspace.dependencies]
anyhow = "1.0.99"
common = { version = "0.2.0", path = "crates/common" }
daemon = { version = "0.2.0", path = "crates/daemon" }
dirs = "6.0.0"
futures-util = "0.3.31"
grass = { version = "0.13.4", default-features = false }
gtk4-layer-shell = "0.6.3"
hyprland = "0.4.0-beta.2"
log = "0.4.27"
relm4 = { version = "0.10.0", default-features = false, features = ["macros"] }
relm4-icons = "0.10.0"
relm4-icons-build = "0.10.0"
serde = { version = "1.0.219", features = ["derive"] }
simple_logger = "5.0.0"
sysinfo = { version = "0.37.0", default-features = false, features = [
  "disk",
  "system",
] }
tempfile = "3.23.0"
thiserror = "2.0.16"
time = { version = "0.3.41", features = ["formatting", "local-offset"] }
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
wayland-client = "0.31.11"
wayland-protocols = { version = "0.32.9", features = ["client", "unstable"] }
wayland-protocols-misc = { version = "0.3.9", features = ["client"] }
xkbcommon = "0.9.0"
zbus = { version = "5.9.0", features = [
  "option-as-array",
  "tokio",
], default-features = false }
zvariant = { version = "5.8.0" }


[workspace.lints.clippy]
pedantic = "warn"
restriction = "allow" # maybe change to warn in the future
style = "warn"

[workspace.metadata]
crane.name = "dod-shell"
