[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT or Apache-2.0"
version = "0.3.0"

[workspace.dependencies]
anyhow = "1.0.99"
common = { version = "*", path = "crates/common" }
daemon = { version = "*", path = "crates/daemon" }
dirs = "6.0.0"
env_logger = "0.11.8"
futures-util = "0.3.32"
grass = { version = "0.13.4", default-features = false }
gtk4-layer-shell = "0.7.1"
hyprland = "0.4.0-beta.3"
log = "0.4.27"
mpris2-zbus = { git = "https://github.com/pop-os/dbus-settings-bindings", version = "0.1.0" }
relm4 = { version = "0.10.0", default-features = false, features = ["macros"] }
relm4-icons = "0.10.0"
relm4-icons-build = "0.10.0"
schemars.version = "1.0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
strum = { version = "0.27.2", features = ["derive"] }
sysinfo = { version = "0.37.0", default-features = false, features = [
  "disk",
  "system",
] }
tempfile = "3.23.0"
thiserror = "2.0.16"
time = { version = "0.3.41", features = ["formatting", "local-offset"] }
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
wayland-client = "0.31.11"
wayland-protocols = { version = "0.32.9", features = ["client", "unstable"] }
wayland-protocols-misc = { version = "0.3.9", features = ["client"] }
xkbcommon = "0.9.0"
zbus = { version = "5.9.0", features = [
  "option-as-array",
  "tokio",
], default-features = false }
zvariant = { version = "5.8.0" }

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }

allow_attributes_without_reason = "deny"
doc_broken_link = "warn"
future_not_send = "allow"
missing_docs_in_private_items = "warn"
significant_drop_tightening = "allow"
too_long_first_doc_paragraph = "warn"

[workspace.metadata]
crane.name = "dod-shell"
