[package]
edition.workspace = true
license.workspace = true
name = "bar"
version.workspace = true

[dependencies]
common.workspace = true
dirs.workspace = true
grass.workspace = true
gtk4-layer-shell.workspace = true
hyprland = { git = "https://github.com/hyprland-community/hyprland-rs", branch = "master" }
log.workspace = true
regex = { version = "1.11.1", default-features = false, features = [
  "unicode-perl",
] }
relm4.workspace = true
serde.workspace = true
simple_logger.workspace = true
sysinfo.workspace = true
time = { version = "0.3.41", features = ["formatting"] }

[lints]
workspace = true

[[bin]]
name = "dod-shell-bar"
path = "src/main.rs"
