[package]
edition.workspace = true
license.workspace = true
name = "bar"
version.workspace = true

[dependencies]
alsa = "0.9.1"
common.workspace = true
dirs.workspace = true
grass.workspace = true
gtk4-layer-shell.workspace = true
hyprland = "0.4.0-beta.2"
log.workspace = true
regex = { version = "1.11.1", default-features = false, features = [
  "unicode-perl",
] }
relm4.workspace = true
serde.workspace = true
simple_logger.workspace = true
sysinfo.workspace = true
time = { version = "0.3.41", features = ["formatting"] }
tokio = { version = "1.47.1", features = ["full"] }
zbus = { version = "5.9.0", features = ["tokio"], default-features = false }

[lints]
workspace = true

[[bin]]
name = "dod-shell-bar"
path = "src/main.rs"
