[package]
edition.workspace = true
license.workspace = true
name = "bar"
version.workspace = true

[dependencies]
common.workspace = true
daemon.workspace = true
dirs.workspace = true
futures-util.workspace = true
grass.workspace = true
gtk4-layer-shell.workspace = true
hyprland.workspace = true
log.workspace = true
relm4.workspace = true
serde.workspace = true
simple_logger.workspace = true
time.workspace = true
tokio.workspace = true
toml.workspace = true
zbus.workspace = true

[lints]
workspace = true

[[bin]]
name = "dod-shell-bar"
path = "src/main.rs"
