[package]
edition.workspace = true
license.workspace = true
name = "cli"
version.workspace = true

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
log.workspace = true
prettytable = { version = "0.10.0", default-features = false }
simple_logger.workspace = true
sysinfo.workspace = true
term = "1.0.2"

[[bin]]
name = "dod-shell-cli"
path = "src/main.rs"
