[package]
edition.workspace = true
license.workspace = true
name = "cli"
version.workspace = true

[dependencies]
clap = { version = "4.5.40", features = ["derive", "string"] }
common = { workspace = true, features = ["schemars"] }
log.workspace = true
prettytable = { version = "0.10.0", default-features = false }
schemars.workspace = true
serde_json.workspace = true
strum.workspace = true
sysinfo.workspace = true
term = "1.0.2"
toml.workspace = true

[lints]
workspace = true

[[bin]]
name = "dod-shell-cli"
path = "src/main.rs"
