[package]
edition.workspace = true
license.workspace = true
name = "common"
version.workspace = true

[dependencies]
dirs.workspace = true
log.workspace = true
schemars = "1.0.4"
serde.workspace = true
strum.workspace = true
thiserror.workspace = true
zvariant.workspace = true

[lints]
workspace = true
