[package]
edition.workspace = true
license.workspace = true
name = "common"
version.workspace = true

[dependencies]
dirs.workspace = true
log.workspace = true
schemars = { workspace = true, optional = true }
serde.workspace = true
strum.workspace = true
thiserror.workspace = true
zvariant.workspace = true

[features]
schemars = ["dep:schemars"]

[lints]
workspace = true
