[package]
edition.workspace = true
license.workspace = true
name = "daemon"
version.workspace = true

[dependencies]
alsa = "0.10.0"
anyhow.workspace = true
common.workspace = true
futures-util.workspace = true
grass.workspace = true
hyprland.workspace = true
log.workspace = true
paste = { version = "0.2.1", package = "pastey" }
regex = { version = "1.11.1", default-features = false, features = [
  "unicode-perl",
] }
serde.workspace = true
serde_json.workspace = true
simple_logger.workspace = true
sysinfo.workspace = true
tempfile.workspace = true
time.workspace = true
tokio.workspace = true
toml.workspace = true
wayland-client.workspace = true
wayland-protocols.workspace = true
wayland-protocols-misc.workspace = true
xkbcommon.workspace = true
zbus.workspace = true

[lints]
workspace = true

[[bin]]
name = "dod-shell-daemon"
path = "src/main.rs"
