[package]
edition.workspace = true
license.workspace = true
name = "deamon"
version.workspace = true

[dependencies]
alsa = "0.9.1"
common.workspace = true
futures-util.workspace = true
hyprland.workspace = true
log.workspace = true
regex = { version = "1.11.1", default-features = false, features = [
  "unicode-perl",
] }
simple_logger.workspace = true
sysinfo.workspace = true
time.workspace = true
tokio.workspace = true
zbus.workspace = true

[lints]
workspace = true

[[bin]]
name = "dod-shell-deamon"
path = "src/main.rs"
