[package]
edition.workspace = true
license.workspace = true
name = "launcher"
version.workspace = true

[dependencies]
common.workspace = true
dirs.workspace = true
evalexpr = "12.0.2"
fuzzy-matcher = "0.3.7"
grass.workspace = true
gtk4-layer-shell.workspace = true
log.workspace = true
percent-encoding = "2.3.1"
relm4.workspace = true
serde.workspace = true
serde_json.workspace = true
simple_logger.workspace = true

[[bin]]
name = "dod-shell-launcher"
path = "src/main.rs"
