[package]
edition.workspace = true
license.workspace = true
name = "launcher"
version.workspace = true

[dependencies]
common.workspace = true
daemon.workspace = true
evalexpr = "12.0.2"
fuzzy-matcher = "0.3.7"
gtk4-layer-shell.workspace = true
percent-encoding = "2.3.1"
relm4.workspace = true
simple_logger.workspace = true
tokio.workspace = true
toml.workspace = true
zbus.workspace = true

[[bin]]
name = "dod-shell-launcher"
path = "src/main.rs"
