[package]
edition.workspace = true
license.workspace = true
name = "osk"
version.workspace = true

[dependencies]
common.workspace = true
daemon.workspace = true
futures-util.workspace = true
gtk4-layer-shell.workspace = true
log.workspace = true
relm4.workspace = true
relm4-icons.workspace = true
serde_json.workspace = true
strum.workspace = true
xkbcommon = "0.9.0"
zbus.workspace = true

[build-dependencies]
relm4-icons-build.workspace = true

[lints]
workspace = true

[[bin]]
name = "dod-shell-osk"
path = "src/main.rs"
